fixed incorrect used of align-content

--- a/src/components/WritePost/WritePost.Component.css
+++ b/src/components/WritePost/WritePost.Component.css
@@ -11,7 +11,6 @@
   flex-direction: row;
   align-content: center;
   height: 30px;
-  /* border-bottom: 1px solid darkgray; */
   padding: 5px 5px 0 5px;
   background-color: #f5f5f5;
 }
@@ -24,7 +23,6 @@
 
 .write-footer {
   display: flex;
-  align-content: center;
   justify-content: space-between;
   height: 40px;
   padding: 5px 10px;
