--- a/src/shared/PostCard/PostCard.Component.css
+++ b/src/shared/PostCard/PostCard.Component.css
@@ -26,7 +26,7 @@
 
 .postCard-footer {
   display: flex;
-  align-content: center;
+  align-items: center;
   height: 30px;
   border-top: 1px solid darkgray;
   padding: 5px;
